[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Tiles/tile_0104.png" type="Texture" id=1]
[ext_resource path="res://Assets/Tiles/tile_0105.png" type="Texture" id=2]
[ext_resource path="res://UFOEnemy.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 7.99906

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "dying",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "flying",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=3]

[node name="UFOEnemy" type="KinematicBody2D" groups=[
"enemy",
]]
collision_layer = 2147483650
collision_mask = 5
script = ExtResource( 3 )

[node name="DyingTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="FiringTimer" type="Timer" parent="."]
wait_time = 1.5

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 3.5 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "dying"
playing = true

[node name="TintTween" type="Tween" parent="AnimatedSprite"]

[node name="WallRayCast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 16, 0 )
collision_mask = 4
collide_with_areas = true

[node name="HitCollision" type="Area2D" parent="."]
gravity_vec = Vector2( 0, 0 )
collision_layer = 0

[node name="HitCollisionShape" type="CollisionShape2D" parent="HitCollision"]
position = Vector2( 0.5, 3.3 )
shape = SubResource( 3 )
[connection signal="timeout" from="DyingTimer" to="." method="_on_DyingTimer_timeout"]
[connection signal="timeout" from="FiringTimer" to="." method="_on_FiringTimer_timeout"]
[connection signal="area_entered" from="HitCollision" to="." method="_on_HitCollision_area_entered"]
